// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="sc-gzVnrw gezWDR k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH hUACjC sc-ifAKCX bFbUUN k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-htpNat kCkIOi k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with imageContainerRatio props matches with snapshot 1`] = `
<div
  className="sc-gzVnrw gezWDR k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH hUACjC sc-ifAKCX ljbxsF k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-htpNat kCkIOi k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with withPlayerButtonOnImage props matches with snapshot 1`] = `
<div
  className="sc-gzVnrw gezWDR k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH hUACjC sc-ifAKCX bFbUUN k-Card__imageContainer"
  >
    <div
      className="sc-bxivhb eIBNLB"
    >
      <span
        className="sc-bdVaJa bDWFJH k-u-color-background1 k-u-size-default k-u-weight-regular"
      >
        ►
      </span>
    </div>
    <img
      alt=""
      className="sc-htpNat kCkIOi k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="sc-gzVnrw gezWDR k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bwzfXH hUACjC sc-ifAKCX bFbUUN k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-htpNat kCkIOi k-Card__image"
      src=""
    />
  </div>
</div>
`;
